S&R: Fix matching ^ and $ in multi-line expressions

BUG: 318232